# OpenJPH

./: CMakeLists.txt  build_all.bat  build_debug.bat  build_debug_x64.bat  build_debug_x86.bat  build_release.bat  build_release_smart.bat  build_release_with_config.bat  build_release_x64.bat  build_release_x86.bat  generate_solution.bat  generate_solution_advanced.bat  generate_solution_x64.bat  generate_solution_x86.bat
docs/: compiling.md
src/apps/: CMakeLists.txt
src/apps/ojph_wrapper/: CMakeLists.txt  Htj2kProcessor.cpp  Htj2kProcessor.h  ojph_wrapper.cpp  ojph_wrapper.def  ojph_wrapper.h
src/apps/test_htj2k_processor/: CMakeLists.txt  Htj2kProcessor.cpp  Htj2kProcessor.h  test_htj2k_processor.cpp  test_htj2k_processor.vcxproj  test_htj2k_processor.vcxproj.filters
